<resources>
    <string name="app_name">Siestazzz</string>
    <string name="tab_text_1">Sleep</string>
    <string name="tab_text_2">Journal</string>
    <string name="tab_text_3">Alarms</string>
    <string name="action_settings">Settings</string>

    <string name="readout" />

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Journal Entry -->
    <string name="journal_title_hint">Enter a tite for the journal.</string>
    <string name="journal_title_label">Title</string>
    <string name="journal_details_label">Details</string>
    <string name="journal_date_label">May 21</string>
    <string name="journal_sleep_duration_label">Sleep Duration:</string>
    <string name="journal_sleep_time_label">Sleep Time:</string>
    <string name="journal_wake_time_label">Wake Time:</string>
    <string name="journal_note_label">Note:</string>
    <string name="date_picker_title">Set Date:</string>
    <string name="time_picker_title_sleep">Sleep Time:</string>
    <string name="time_picker_title_wake">Wake Time:</string>
    <string name="date_picker_title_sleep">Sleep Date:</string>
    <string name="date_picker_title_wake">Wake Date:</string>
    <string name="journal_entry_play_sound">Playback Sleep Sound</string>
    <string name="journal_entry_motion">Motion:</string>
    <string name="journal_entry_motion_none">No Motion Detected</string>
    <string name="journal_entry_motion_light">Light</string>
    <string name="journal_entry_motion_moderate">Moderate</string>
    <string name="journal_entry_motion_heavy">Heavy</string>
    <string name="time_picker_title">Set Time</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_list_alarms">ListAlarmsActivity</string>
    <string name="channel_name">Siestazzz</string>
    <string name="channel_description">Siestazzz_notification</string>

</resources>
